--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-material-icon",
-  "version": "1.0.0",
+  "name": "vue-micon",
+  "version": "1.1.0",
   "main": "./src/components/VueMaterialIcon.vue",
   "description": "Vue.js functional component to display material icons",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/achwilko/vue-material-icon.git"
+    "url": "git+https://github.com/laosb/vue-micon.git"
   },
   "keywords": [
     "icon",
@@ -22,9 +22,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/achwilko/vue-material-icon/issues"
+    "url": "https://github.com/laosb/vue-micon/issues"
   },
-  "homepage": "https://github.com/achwilko/vue-material-icon#readme",
+  "homepage": "https://github.com/laosb/vue-micon#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
