--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vue-micon",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "main": "./src/components/VueMaterialIcon.vue",
+  "types": "./src/components/VueMaterial.d.ts",
   "description": "Vue.js functional component to display material icons",
   "scripts": {
     "lint": "eslint --ext .js,.vue src test/unit/specs",
